# sae-probe

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  evaluate.py  generate_vectors.py  gpt2_act.py  pyproject.toml  utils.py
.github/workflows/: release.yaml  tests.yaml
david/: all.py  comp_utils.py  gpt2_act.py  plot_utils.py  readme.txt  requirements.txt  results.pkl  utils.py
docs/: setup.md
tests/: test_init.py
